# task_manager

./: README.md  pyproject.toml
task_manager/: cli.py  models.py
tests/: __init__.py
